# embedding-with-groq-and-qdrant

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_setup.py  setup.sh  streamlit_app.py
src/: __init__.py
src/agent/: __init__.py  sales_agent.py
src/api/: __init__.py  models.py  routes.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  processor.py
src/embeddings/: __init__.py  generator.py  storage.py
