[project]
name = "embedding-with-groq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.14",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "groq>=0.30.0",
    "plotly>=6.2.0",
    "qdrant-client>=1.14.3",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.46.1",
    "tenacity>=9.1.2",
    "uvicorn>=0.35.0",
]
